--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -6,9 +6,17 @@
       padding: 20px;
       color: #eee;
       font-size: 18px;
+      display: flex;
 
-      i {
-        margin-right: 20px;
+      svg{
+        width: 30px;
+        margin-right: 10px;
+        flex-shrink: 0;
+        margin-top: 2px;
+      }
+
+      p{
+        flex-shrink: 0;
       }
     }
 
